# Eltrafico

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/eltrafico-tc/: Cargo.toml
crates/eltrafico-tc/examples/: demo_global_limit.ts
crates/eltrafico-tc/src/: ipc.rs  main.rs  tc.rs  utils.rs
crates/gui/: Cargo.toml
crates/gui/src/: gui.rs  utils.rs
crates/gui/src/gui/: widget_builder.rs
crates/gui/src/netmonitor/: nethogs.rs
crates/tc/: Cargo.toml
crates/tc/conf/: el.toml
crates/tc/src/: main.rs  tc.rs  utils.rs
frontend/: README.md
frontend/traffictoll/: README.md  config.example.toml  config.example.yml  eltrafico.ts  traffictoll.ts
src/: gui.rs  limit.rs  lsof.rs  main.rs  nethogs.rs  parse.rs  tc.rs  utils.rs
src/eltrafico_main/: gui.rs  limit.rs  main.rs  nethogs.rs  netmonitor.rs  utils.rs
src/eltrafico_main/gui/: widget_builder.rs
src/eltrafico_main/netmonitor/: bandwhich.rs  nethogs.rs
src/eltrafico_tc/: main.rs  tc.rs  utils.rs
src/gui/: widget_builder.rs
