[package]
name = "eltrafico"
version = "1.7.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "NetLimiter-like traffic shaping for Linux"
repository = "https://github.com/sigmaSd/Eltrafico/"
license = "GPL-3.0"

[dependencies]
gtk = "0.8.1"
glib = "0.9.3"
gio = "0.8.1"
