[package]
name = "tc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
clap = { version = "3.2.17", features = ["derive"] }
toml = "0.5.9"
serde = { version = "1.0.144", features = ["serde_derive", "derive"] }
notify = "4.0.17"
ctrlc = "3.2.3"
 

[dependencies.simple_logger]
version = "2.3.0"
features = ["stderr"]
